--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Noctivago</title> 
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="/progra-3-grupo/noctivago-tp1/css/eventos.css">
+    <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
+    <link rel="stylesheet" href="/noctivago-tp1/css/eventos.css">
 
 </head>
 
@@ -37,7 +37,7 @@
               <!--TARJETA 1-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/progra-3-grupo/noctivago-tp1/img_eventos/fiesta-nacional-del-camaron-y-el-langostino.jpeg" alt="Artista">
+                  <img src="/noctivago-tp1/img_eventos/fiesta-nacional-del-camaron-y-el-langostino.jpeg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -57,7 +57,7 @@
               <!--TARJETA 2-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/progra-3-grupo/noctivago-tp1/img_eventos/fvck club.jpg" alt="Artista">
+                  <img src="/noctivago-tp1/img_eventos/fvck club.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -77,7 +77,7 @@
               <!--TARJETA 3-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/progra-3-grupo/noctivago-tp1/img_eventos/this is techno.jpg" alt="Artista">
+                  <img src="/noctivago-tp1/img_eventos/this is techno.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -97,27 +97,27 @@
               <!--TARJETA 4-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/progra-3-grupo/noctivago-tp1/img_eventos/skrillex flyer.jpg" alt="Artista">
+                  <img src="/noctivago-tp1/img_eventos/neo-pistea-bb.avif" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
-                        <li><h2>NOMBRE</h2></li>
-                        <li><h3>FECHA</h3></li>
-                        <li><h4>HORA</h4></li>
-                        <li><h4>LUGAR</h4></li>
+                        <li><h2>NEO PISTEA</h2></li>
+                        <li><h3>05 MAY 25</h3></li>
+                        <li><h4>20:00 HS</h4></li>
+                        <li><h4>TEATRO ROSSINI</h4></li>
                       </ul>
                   </div>
                   <div class="card__access">
-                        <a href="#"><button>Adquirir tickets</button></a>
-                        <a href="#"><button>+ info</button></a>
+                        <a href="https://livepass.com.ar/events/neo-pistea-en-bb" target="_blank"><button>Adquirir tickets</button></a>
+                        <a href="https://www.cmtv.com.ar/biografia/show.php?bnid=2540&banda=Neo_Pistea" target="_blank"><button>+ info</button></a>
                   </div>
                 </div>
               </div>
               <!--TARJETA 5-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/progra-3-grupo/noctivago-tp1/img_eventos/skrillex flyer.jpg" alt="Artista">
+                  <img src="/noctivago-tp1/img_eventos/skrillex flyer.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -137,7 +137,7 @@
               <!--TARJETA 6-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/progra-3-grupo/noctivago-tp1/img_eventos/skrillex flyer.jpg" alt="Artista">
+                  <img src="/noctivago-tp1/img_eventos/skrillex flyer.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
