--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" lang="en">
+<html lang="en" lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,7 +18,7 @@
                     <li><a href="#principal">Noctivago</a></li>
                     <li><a href="#Eventos">Eventos</a></li>
                     <li><a href="#Galeria">Galeria</a></li>
-                    <li><a href="#Contacto">Contacto</a></li>
+                    <li><a href="/formulario.html" target="blank">Contacto</a></li>
                 </ul>
             </nav>
         </header>
