Se ajustan ultimos detalles, se agregan imagenes faltantes y se cambia el fondo de la seccion de 'proximos eventos'.

--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -7,34 +7,34 @@
     <title>Eventos</title>
 </head>
 <body>
-    <main>
+    <main class="ev__main">
         <section class="info">
             <article class="info__aboutOf">
                 <h1>EVENTOS</h1>
                 <P>En esta sección vas a encontrar todos los eventos próximos que tiene nuestra ciudad, podes comprar los tickets e informarte sobre el artista o la fiesta que se lleve a cabo,
-                así que si estás manija y necesitas divertirte con tus familiares o amigos estás en la sección correcta de la página</P>
+                así que si estás manija y necesitas divertirte con tus familiares o amigos estás en la sección correcta de la página.</P>
             </article>
         </section>
         <section class="events">
-            <h2>Proximos eventos</h2>
+            <h2>PROXIMOS EVENTOS</h2>
             <article class="event__cards">
               <!--TARJETA 1-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/noctivago-tp1/img_eventos/fiesta-nacional-del-camaron-y-el-langostino.jpeg" alt="Artista">
+                  <img src="/noctivago-tp1/img_eventos/seven-kayne.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
-                        <li><b><h3>Fiesta Nacional del camaron y langostino</h3></b></li>
-                        <li><h3>18 ABR 25</h3></li>
-                        <li><h4>15:00 HS</h4></li>
-                        <li><h4>Puerto de Ing.White</h4></li>
+                        <li><b><h3>SEVEN KAYNE</h3></b></li>
+                        <li><h3>17 MAY 25</h3></li>
+                        <li><h4>21:00 HS</h4></li>
+                        <li><h4>TEATRO ROSSINI</h4></li>
                       </ul>
                   </div>
                   <div class="card__access">
-                        <span><button disabled>Gratis</button></span>
-                        <a href="https://fiestadelcamaronylangostino.com.ar/" target="_blank"><button>+ info</button></a>
+                        <a href="https://ticketbahia.com/site/front-datosEvento.php?idEvento=931" target="_blank"><button>Obtener tickets</button></a>
+                        <a href="https://www.cmtv.com.ar/biografia/show.php?bnid=2756&banda=Seven_Kayne" target="_blank"><button>+ info</button></a>
                   </div>
                 </div>
               </div>
