Formulario adaptado al estilo de la pagina

--- a/formulario.html
+++ b/formulario.html
@@ -25,14 +25,14 @@
         <input type="number" id="numero" name="numero" required>
 
         <p> Quieres recibir novedades a tu mail? </p>
-        <label>
+        <label for opcion="si">
+            <input type="radio" name="opcion-si" name="opcion" value="Si">
             Si, quiero
-            <input type="radio" name="opcion" value="Si">
         </label><br>
           
-        <label>
+        <label for opcion="no">
+            <input type="radio" name="opcion-no" name="opcion" value="No">
             No, no quiero
-            <input type="radio" name="opcion" value="No">
         </label>
 
 
