--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -10,10 +10,14 @@
  
 
 
+ 
+
+
 </head>
 
 <body>
-  
+  <script src="slider.js" defer></script>
+
   
       <header>
       
@@ -38,9 +42,11 @@
           <h1>¡Buenas noches Bahia!</h1>
           <!--el h1 deberia ser una imagen linda q diga eso o que estilo decorado le puedo dar al texto?-->
           <section class="slider">
-            <button class="arrow left"></button>
-            <img src="imgn/fiesta.png" alt="Imagen destacada">
-            <button class="arrow right">></button>
+            <div class="slider-container">
+              <button id="prev" class="arrow left"><</button>
+              <img id="slide" src="imgn/fiesta.png" alt="Imagen destacada">
+              <button id="next" class="arrow right">></button>
+            </div>
           </section>
           <h3>La agenda cultural de tu ciudad, en un solo lugar. Descubrí fiestas, eventos culturales, recitales y más.</h3>
           <!--tiene q tener un dieño lindo ya que es la mision de la pagina. y con esto ya termina la pantalla principal-->
