--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <script src="slider.js" defer></script>
+  <script src="noctivago-tp1/js/slider.js" defer></script>
 
   
       <header>
