escribi bien las rutas

--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -3,10 +3,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noctivago</title> <!-- se puede agregar un icono a la pestaña?-->
   <title>Noctivago</title> 
-  <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
-  <link rel="stylesheet" href="/noctivago-tp1/css/eventos.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/eventos.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <link rel="stylesheet" href="/noctivago-tp1/css/letras.css">
+  <link rel="stylesheet" href="css/letras.css">
  
 
 
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <script src="noctivago-tp1/js/slider.js" defer></script>
+    <script src="js/slider.js" defer></script>
 
   
       <header>
