Se agregan fuentes y se arreglan un par de cosas en el index y en la seccion de eventos

--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/noctivago-tp1/css/eventos.css">
+    <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
     <title>Eventos</title>
 </head>
 <body>
+  <nav>
+    <div class="nav-container">
+      <a href="index.html" id="logo">Noctivago</a>
+      <ul class="nav-links">
+        <li><a href="eventos.html" target="_blank">EVENTOS</a></li>
+        <li><a href="galeria.html" target="_blank">GALERIA</a></li>
+        <li><a href="/formulario.html" target="_blank">CONTACTO</a></li>
+      </ul>
+    </div>
+  </nav>
     <main class="ev__main">
         <section class="info">
             <article class="info__aboutOf">
                 <h1>EVENTOS</h1>
-                <P>En esta sección vas a encontrar todos los eventos próximos que tiene nuestra ciudad, podes comprar los tickets e informarte sobre el artista o la fiesta que se lleve a cabo,
-                así que si estás manija y necesitas divertirte con tus familiares o amigos estás en la sección correcta de la página.</P>
+                <p>En esta sección vas a encontrar todos los eventos próximos que tiene nuestra ciudad, podes comprar los tickets e informarte sobre el artista o la fiesta que se lleve a cabo,
+                así que si estás manija y necesitas divertirte con tus familiares o amigos estás en la sección correcta de la página.</p>
             </article>
         </section>
         <section class="events">
-            <h2>PROXIMOS EVENTOS</h2>
+            <!--<h2>PROXIMOS EVENTOS</h2>-->
             <article class="event__cards">
               <!--TARJETA 1-->
               <div class="card">
@@ -141,5 +152,14 @@
             </article>
           </section>
     </main>
+    <footer>
+      <div class="footer-content">
+        <p>© 2025 Noctivago - Síguenos en:</p>
+        <div class="redes">
+          <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
