footer + barra de navegacion en formulario (empezando)

--- a/formulario.html
+++ b/formulario.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8">
     <title>Suscripcion</title>
     <link rel="stylesheet" href="/noctivago-tp1/css/formulario.css">
-
+    <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
 </head>
 <body>
-    <h1> Suscripcion de usuario </h1>
+    <nav>
+        <div class="nav-container">
+          <a href="index.html" id="logo">Noctivago</a>
+          <ul class="nav-links">
+            <li><a href="/eventos.html" target="_blank">EVENTOS</a></li>
+            <li><a href="/galeria.html" target="_blank">GALERIA</a></li>
+            <li><a href="/formulario.html" target="_blank">CONTACTO</a></li>
+          </ul>
+        </div>
+    </nav>
+    <h1> SUSCRIPCION DE USUARIO </h1>
     <form action="/destino" method="POST" target ="_blank">
         <label for="usuario">Nombre de usuario:</label>
         <input type="text" id="usuario" name="usuario" required>
@@ -53,6 +63,15 @@
             <button type="reset">Borrar</button>
         </div>
       </form>
+      <footer>
+        <div class="footer-content">
+          <p>© 2025 Noctivago - Síguenos en:</p>
+          <div class="redes">
+            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+          </div>
+        </div>
+      </footer>
     
 </body>
 </html>
