correccion index y styles

--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="css/letras.css">
   </head>
 
-  <body>
+  <body >
     <script src="js/slider.js" defer></script>
 
   
@@ -26,8 +26,8 @@
         </nav>
       </header>
       
-      <main> 
-          <h1>¡Buenas noches Bahia!</h1>
+      <main id="home"> 
+          <h1 id="titulo">¡Buenas noches Bahia!</h1>
           <!--el h1 deberia ser una imagen linda q diga eso o que estilo decorado le puedo dar al texto?-->
           <section class="slider">
             <div class="slider-container">
@@ -36,7 +36,7 @@
               <button id="next" class="arrow right">></button>
             </div>
           </section>
-          <h3>La agenda cultural de tu ciudad, en un solo lugar. Descubrí fiestas, eventos culturales, recitales y más.</h3>
+          <h3 id="mision">La agenda cultural de tu ciudad, en un solo lugar. Descubrí fiestas, eventos culturales, recitales y más.</h3>
           <!--tiene q tener un dieño lindo ya que es la mision de la pagina. y con esto ya termina la pantalla principal-->   
       </main>
 
