Se arregla footer en eventos.html  para que ocupe bien la pantalla

--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/noctivago-tp1/css/eventos.css">
     <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Eventos</title>
 </head>
 <body>
@@ -32,13 +33,13 @@
               <!--TARJETA 1-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/noctivago-tp1/img_eventos/seven-kayne.jpg" alt="Artista">
+                  <img class="card__img" src="/noctivago-tp1/img_eventos/seven-kayne.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
-                        <li><b><h3>SEVEN KAYNE</h3></b></li>
-                        <li><h3>17 MAY 25</h3></li>
+                        <li><h2>SEVEN KAYNE</h2></li>
+                        <li><h2>17 MAY 25</h2></li>
                         <li><h4>21:00 HS</h4></li>
                         <li><h4>TEATRO ROSSINI</h4></li>
                       </ul>
@@ -52,13 +53,13 @@
               <!--TARJETA 2-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/noctivago-tp1/img_eventos/fvck club.jpg" alt="Artista">
+                  <img class="card__img" src="/noctivago-tp1/img_eventos/fvck club.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
                         <li><h2>MATEO DUFOUR</h2></li>
-                        <li><h3>17 MAY 25</h3></li>
+                        <li><h2>17 MAY 25</h2></li>
                         <li><h4>23:00 HS</h4></li>
                         <li><h4>FVCK CLUB</h4></li>
                       </ul>
@@ -72,13 +73,13 @@
               <!--TARJETA 3-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/noctivago-tp1/img_eventos/this is techno.jpg" alt="Artista">
+                  <img class="card__img" src="/noctivago-tp1/img_eventos/this is techno.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
                         <li><h2>JUAN HANSEN</h2></li>
-                        <li><h3>26 ABR 25</h3></li>
+                        <li><h2>26 ABR 25</h2></li>
                         <li><h4>23:00 HS</h4></li>
                         <li><h4>THIS IS TECHNO</h4></li>
                       </ul>
@@ -92,13 +93,13 @@
               <!--TARJETA 4-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/noctivago-tp1/img_eventos/neo-pistea-bb.avif" alt="Artista">
+                  <img class="card__img" src="/noctivago-tp1/img_eventos/neo-pistea-bb.avif" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
                         <li><h2>NEO PISTEA</h2></li>
-                        <li><h3>05 MAY 25</h3></li>
+                        <li><h2>05 MAY 25</h2></li>
                         <li><h4>20:00 HS</h4></li>
                         <li><h4>TEATRO ROSSINI</h4></li>
                       </ul>
@@ -112,13 +113,13 @@
               <!--TARJETA 5-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/noctivago-tp1/img_eventos/NEIK.jpg" alt="Artista">
+                  <img class="card__img" src="/noctivago-tp1/img_eventos/NEIK.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
                           <li><h2>NEIK</h2></li>
-                          <li><h3>11 ABR 25</h3></li>
+                          <li><h2>11 ABR 25</h2></li>
                           <li><h4>12:00 HS</h4></li>
                           <li><h4>BRONX SOCIAL CLUB</h4></li>
                       </ul>
@@ -132,13 +133,13 @@
               <!--TARJETA 6-->
               <div class="card">
                 <div class="card__pt1">
-                  <img src="/noctivago-tp1/img_eventos/KnockOut-Freestyle.jpg" alt="Artista">
+                  <img class="card__img" src="/noctivago-tp1/img_eventos/KnockOut-Freestyle.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
                       <ul>
-                        <li><h2>KNOCKOUT FREESTYLE</h2></li>
-                        <li><h3>13 ABR 25</h3></li>
+                        <li><h2>K.O FREESTYLE</h2></li>
+                        <li><h2>13 ABR 25</h2></li>
                         <li><h4>16:00 HS</h4></li>
                         <li><h4>ANFITEATRO EZEQUIEL MARTINEZ</h4></li>
                       </ul>
