--- a/noctivago-tp1/galeria.html
+++ b/noctivago-tp1/galeria.html
@@ -10,6 +10,8 @@
 	<link rel="stylesheet" href="/noctivago-tp1/css/galeria.css">
 	<link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+	<link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
+
 	<title>Nuestros eventos</title>
 </head>
 <body>
