--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/noctivago-tp1/css/eventos.css">
     <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
     <title>Eventos</title>
 </head>
 <body>
