--- a/noctivago-tp1/formulario.html
+++ b/noctivago-tp1/formulario.html
@@ -5,8 +5,10 @@
     <title>Suscripcion</title>
     <link rel="stylesheet" href="/noctivago-tp1/css/formulario.css">
     <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
-    
-</head>
+    <link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  </head>
 <body>
   <nav>
     <div class="nav-container">
