--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="css/letras.css">
+  <link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
+
   </head>
 
   <body >
@@ -20,7 +22,7 @@
             <ul class="nav-links">
               <li><a href="eventos.html" target="_blank">EVENTOS</a></li>
               <li><a href="galeria.html" target="_blank">GALERIA</a></li>
-              <li><a href="/formulario.html" target="_blank">CONTACTO</a></li>
+              <li><a href="formulario.html" target="_blank">CONTACTO</a></li>
             </ul>
           </div>
         </nav>
