--- a/noctivago-tp1/formulario.html
+++ b/noctivago-tp1/formulario.html
@@ -12,11 +12,11 @@
 <body>
   <nav>
     <div class="nav-container">
-      <a href="/noctivago-tp1/index.html" id="logo">Noctivago</a>
+      <a href="index.html" id="logo">Noctivago</a>
       <ul class="nav-links">
-        <li><a href="/noctivago-tp1/eventos.html" target="_blank">EVENTOS</a></li>
-        <li><a href="/galeria.html" target="_blank">GALERIA</a></li>
-        <li><a href="/formulario.html" target="_blank">CONTACTO</a></li>
+        <li><a href="eventos.html" target="_blank">EVENTOS</a></li>
+        <li><a href="galeria.html" target="_blank">GALERIA</a></li>
+        <li><a href="formulario.html" target="_blank">CONTACTO</a></li>
       </ul>
     </div>
   </nav>
