--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -16,7 +16,7 @@
       <ul class="nav-links">
         <li><a href="eventos.html" target="_blank">EVENTOS</a></li>
         <li><a href="galeria.html" target="_blank">GALERIA</a></li>
-        <li><a href="/formulario.html" target="_blank">CONTACTO</a></li>
+        <li><a href="formulario.html" target="_blank">CONTACTO</a></li>
       </ul>
     </div>
   </nav>
