--- a/noctivago-tp1/galeria.html
+++ b/noctivago-tp1/galeria.html
@@ -15,80 +15,84 @@
 	<title>Nuestros eventos</title>
 </head>
 <body>
-	<header>
-        <nav>
-          <div class="nav-container">
-            <a href="index.html" id="logo">Noctivago</a>
-            <ul class="nav-links">
-              <li><a href="eventos.html" target="_blank">EVENTOS</a></li>
-              <li><a href="galeria.html" target="_blank">GALERIA</a></li>
-              <li><a href="formulario.html" target="_blank">CONTACTO</a></li>
-            </ul>
-          </div>
-        </nav>
-      </header>
-	<div class="contenedor">
-		<div class="contenedor-conciertos">
-			<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno1.jpg')">
-				<div class="textos">
-					<h3>The beginning...</h3>
-					<p>Fecha finalizada.</p>
+	<div class="page-container">
+		<header>
+			<nav>
+				<div class="nav-container">
+					<a href="index.html" id="logo">Noctivago</a>
+					<ul class="nav-links">
+						<li><a href="eventos.html" target="_blank">EVENTOS</a></li>
+						<li><a href="galeria.html" target="_blank">GALERIA</a></li>
+						<li><a href="formulario.html" target="_blank">CONTACTO</a></li>
+					</ul>
 				</div>
-			</div>
-			<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/blanco_y_negro2.jpg')">
-				<div class="textos">
-					<h3>Relax zone</h3>
-					<p>Fecha finalizada.</p>
-				</div>
-			</div>
-			<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/blanco_y_negro3.jpg')">
-				<div class="textos">
-					<h3>Techno for everyone...</h3>
-					<p>Fecha finalizada.</p>
-				</div>
-			</div>
+			</nav>
+		</header>
+		<main>
+			<div class="contenedor">
+				<div class="contenedor-conciertos">
+					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno1.jpg')">
+						<div class="textos">
+							<h3>The beginning...</h3>
+							<p>Fecha finalizada.</p>
+						</div>
+					</div>
+					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/blanco_y_negro2.jpg')">
+						<div class="textos">
+							<h3>Relax zone</h3>
+							<p>Fecha finalizada.</p>
+						</div>
+					</div>
+					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/blanco_y_negro3.jpg')">
+						<div class="textos">
+							<h3>Techno for everyone...</h3>
+							<p>Fecha finalizada.</p>
+						</div>
+					</div>
 
-			<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno5.jpg')">
-				<div class="textos">
-					<h3>Local DJs</h3>
-					<p>20 de Diciembre 2025</p>
+					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno5.jpg')">
+						<div class="textos">
+							<h3>Local DJs</h3>
+							<p>20 de Diciembre 2025</p>
+						</div>
+					</div>
+					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno6.jpg')">
+						<div class="textos">
+							<h3>House music</h3>
+							<p>27 de Diciembre 2021</p>
+						</div>
+					</div>
+					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno2.jpg')">
+						<div class="textos">
+							<h3>The Night of Mystery</h3>
+							<p>1 de Enero 2021</p>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno6.jpg')">
-				<div class="textos">
-					<h3>House music</h3>
-					<p>27 de Diciembre 2021</p>
-				</div>
-			</div>
-			<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno2.jpg')">
-				<div class="textos">
-					<h3>The Night of Mystery</h3>
-					<p>1 de Enero 2021</p>
-				</div>
-			</div>
-		</div>
 
-		<div class="banner" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_banner.jpg');">
-			<h3>Legends...</h3>
-			<ul>
-				<li>Mateo Dufour</li>
-				<li>Rossi</li>
-				<li>Tomas Saenz</li>
-				<li>Agustin Clark</li>
-				<li>Juaan</li>
-				<li>Mariano Mellino</li>
-			</ul>
-			<button class="boton">Buy Tickets</button>
-		</div>
+				<div class="banner" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_banner.jpg');">
+					<h3>Legends...</h3>
+					<ul>
+						<li>Mateo Dufour</li>
+						<li>Rossi</li>
+						<li>Tomas Saenz</li>
+						<li>Agustin Clark</li>
+						<li>Juaan</li>
+						<li>Mariano Mellino</li>
+					</ul>
+					<button class="boton">Buy Tickets</button>
+				</div>
+			</div>
+		</main>
+		<footer>
+			<div class="footer-content">
+			<p>© 2025 Noctivago - Síguenos en:</p>
+			<div class="redes">
+				<a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+				<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+			</div>
+			</div> 
+		</footer>
 	</div>
-	<footer>
-        <div class="footer-content">
-          <p>© 2025 Noctivago - Síguenos en:</p>
-          <div class="redes">
-            <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-          </div>
-        </div> 
-      </footer>
 </body>
 </html>
