--- a/DOM-tp2/ej_3/3.html
+++ b/DOM-tp2/ej_3/3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manipulación de Clases CSS</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="3.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
+    <script src="3.js"></script>
 </body>
 </html>
