--- a/DOM-tp2/EJ4/index.html
+++ b/DOM-tp2/EJ4/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/DOM-tp2/EJ4/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Ejercicio 4</title>
 </head>
 <body>
@@ -17,6 +17,6 @@
         <p id="message"></p>
         <ul id="empty"></ul>
     </section>
-    <script src="/DOM-tp2/EJ4/js/scripts.js"></script>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
