--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/noctivago-tp1/css/eventos.css">
-    <link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
+    <link rel="stylesheet" href="./css/eventos.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
     <title>Eventos</title>
