--- a/noctivago-tp1/galeria.html
+++ b/noctivago-tp1/galeria.html
@@ -7,8 +7,8 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
-	<link rel="stylesheet" href="/noctivago-tp1/css/galeria.css">
-	<link rel="stylesheet" href="/noctivago-tp1/css/styles.css">
+	<link rel="stylesheet" href="./css/galeria.css">
+	<link rel="stylesheet" href="./css/styles.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 	<link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
 
