Se corrigieron rutas

--- a/DOM-tp2/EJ4/ejercicio4.html
+++ b/DOM-tp2/EJ4/ejercicio4.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles4.css">
     <title>Ejercicio 4</title>
 </head>
 <body>
     <section class="container">
-        <video autoplay muted loop class="video__container" src="/DOM-tp2/EJ4/resources/wave-lines.mp4"></video>
+        <video autoplay muted loop class="video__container" src="./resources/wave-lines.mp4"></video>
         <h1>Agrega palabras</h1>
         <form id="addWord" action="">
             <input id="inputText" type="text" placeholder="Escribe algo">
@@ -17,6 +17,6 @@
         <p id="message"></p>
         <ul id="empty"></ul>
     </section>
-    <script src="./js/scripts.js"></script>
+    <script src="./js/scripts4.js"></script>
 </body>
 </html>
