--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -12,18 +12,18 @@
 <body>
   <nav>
     <div class="nav-container">
-      <a href="index.html" id="logo">Noctivago</a>
+      <a href="./index.html" id="logo">Noctivago</a>
       <ul class="nav-links">
-        <li><a href="eventos.html" target="_blank">EVENTOS</a></li>
-        <li><a href="galeria.html" target="_blank">GALERIA</a></li>
-        <li><a href="formulario.html" target="_blank">CONTACTO</a></li>
+        <li><a href="./eventos.html" target="_blank">EVENTOS</a></li>
+        <li><a href="./galeria.html" target="_blank">GALERIA</a></li>
+        <li><a href="./formulario.html" target="_blank">CONTACTO</a></li>
       </ul>
     </div>
   </nav>
     <main class="ev__main">
         <section class="info">
             <article class="info__aboutOf">
-                <h1>EVENTOS</h1>
+                <h1 id="titulo">EVENTOS</h1>
                 <p>En esta sección vas a encontrar todos los eventos próximos que tiene nuestra ciudad, podes comprar los tickets e informarte sobre el artista o la fiesta que se lleve a cabo,
                 así que si estás manija y necesitas divertirte con tus familiares o amigos estás en la sección correcta de la página.</p>
             </article>
@@ -34,7 +34,7 @@
               <!--TARJETA 1-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="/noctivago-tp1/img_eventos/seven-kayne.jpg" alt="Artista">
+                  <img class="card__img" src="./img_eventos/seven-kayne.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -54,7 +54,7 @@
               <!--TARJETA 2-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="/noctivago-tp1/img_eventos/fvck club.jpg" alt="Artista">
+                  <img class="card__img" src="./img_eventos/fvck club.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -74,7 +74,7 @@
               <!--TARJETA 3-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="/noctivago-tp1/img_eventos/this is techno.jpg" alt="Artista">
+                  <img class="card__img" src="./img_eventos/this is techno.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -94,7 +94,7 @@
               <!--TARJETA 4-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="/noctivago-tp1/img_eventos/neo-pistea-bb.avif" alt="Artista">
+                  <img class="card__img" src="./img_eventos/neo-pistea-bb.avif" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -114,7 +114,7 @@
               <!--TARJETA 5-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="/noctivago-tp1/img_eventos/NEIK.jpg" alt="Artista">
+                  <img class="card__img" src="./img_eventos/NEIK.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -134,7 +134,7 @@
               <!--TARJETA 6-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="/noctivago-tp1/img_eventos/KnockOut-Freestyle.jpg" alt="Artista">
+                  <img class="card__img" src="./img_eventos/KnockOut-Freestyle.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
