--- a/noctivago-tp1/galeria.html
+++ b/noctivago-tp1/galeria.html
@@ -19,11 +19,11 @@
 		<header>
 			<nav>
 				<div class="nav-container">
-					<a href="index.html" id="logo">Noctivago</a>
+					<a href="./index.html" id="logo">Noctivago</a>
 					<ul class="nav-links">
-						<li><a href="eventos.html" target="_blank">EVENTOS</a></li>
-						<li><a href="galeria.html" target="_blank">GALERIA</a></li>
-						<li><a href="formulario.html" target="_blank">CONTACTO</a></li>
+						<li><a href="./eventos.html" target="_blank">EVENTOS</a></li>
+						<li><a href="./galeria.html" target="_blank">GALERIA</a></li>
+						<li><a href="./formulario.html" target="_blank">CONTACTO</a></li>
 					</ul>
 				</div>
 			</nav>
@@ -31,38 +31,38 @@
 		<main>
 			<div class="contenedor">
 				<div class="contenedor-conciertos">
-					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno1.jpg')">
+					<div class="card" style="background-image: url('./imagenes_grid/imagen_techno1.jpg')">
 						<div class="textos">
 							<h3>The beginning...</h3>
 							<p>Fecha finalizada.</p>
 						</div>
 					</div>
-					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/blanco_y_negro2.jpg')">
+					<div class="card" style="background-image: url('./imagenes_grid/blanco_y_negro2.jpg')">
 						<div class="textos">
 							<h3>Relax zone</h3>
 							<p>Fecha finalizada.</p>
 						</div>
 					</div>
-					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/blanco_y_negro3.jpg')">
+					<div class="card" style="background-image: url('./imagenes_grid/blanco_y_negro3.jpg')">
 						<div class="textos">
 							<h3>Techno for everyone...</h3>
 							<p>Fecha finalizada.</p>
 						</div>
 					</div>
 
-					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno5.jpg')">
+					<div class="card" style="background-image: url('./imagenes_grid/imagen_techno5.jpg')">
 						<div class="textos">
 							<h3>Local DJs</h3>
 							<p>20 de Diciembre 2025</p>
 						</div>
 					</div>
-					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno6.jpg')">
+					<div class="card" style="background-image: url('./imagenes_grid/imagen_techno6.jpg')">
 						<div class="textos">
 							<h3>House music</h3>
 							<p>27 de Diciembre 2021</p>
 						</div>
 					</div>
-					<div class="card" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_techno2.jpg')">
+					<div class="card" style="background-image: url('./imagenes_grid/imagen_techno2.jpg')">
 						<div class="textos">
 							<h3>The Night of Mystery</h3>
 							<p>1 de Enero 2021</p>
@@ -70,7 +70,7 @@
 					</div>
 				</div>
 
-				<div class="banner" style="background-image: url('/noctivago-tp1/imagenes_grid/imagen_banner.jpg');">
+				<div class="banner" style="background-image: url('./imagenes_grid/imagen_banner.jpg');">
 					<h3>Legends...</h3>
 					<ul>
 						<li>Mateo Dufour</li>
