acomodo carpeta img en tp1

--- a/noctivago-tp1/eventos.html
+++ b/noctivago-tp1/eventos.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./css/eventos.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
+    <link rel="icon" href="img/icons8-murciélago-100.png" type="image/png">
     <title>Eventos</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
               <!--TARJETA 1-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="./img_eventos/seven-kayne.jpg" alt="Artista">
+                  <img class="card__img" src="./img/img_eventos/seven-kayne.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -54,7 +54,7 @@
               <!--TARJETA 2-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="./img_eventos/fvck club.jpg" alt="Artista">
+                  <img class="card__img" src="./img/img_eventos/fvck club.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -74,7 +74,7 @@
               <!--TARJETA 3-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="./img_eventos/this is techno.jpg" alt="Artista">
+                  <img class="card__img" src="./img/img_eventos/this is techno.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -94,7 +94,7 @@
               <!--TARJETA 4-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="./img_eventos/neo-pistea-bb.avif" alt="Artista">
+                  <img class="card__img" src="./img/img_eventos/neo-pistea-bb.avif" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -114,7 +114,7 @@
               <!--TARJETA 5-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="./img_eventos/NEIK.jpg" alt="Artista">
+                  <img class="card__img" src="./img/img_eventos/NEIK.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
@@ -134,7 +134,7 @@
               <!--TARJETA 6-->
               <div class="card">
                 <div class="card__pt1">
-                  <img class="card__img" src="./img_eventos/KnockOut-Freestyle.jpg" alt="Artista">
+                  <img class="card__img" src="./img/img_eventos/KnockOut-Freestyle.jpg" alt="Artista">
                 </div>
                 <div class="card__pt2">
                   <div class="card__info">
