--- a/noctivago-tp1/formulario.html
+++ b/noctivago-tp1/formulario.html
@@ -5,7 +5,7 @@
     <title>Suscripcion</title>
     <link rel="stylesheet" href="./css/formulario.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
+    <link rel="icon" href="img/icons8-murciélago-100.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   </head>
