--- a/noctivago-tp1/index.html
+++ b/noctivago-tp1/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <link rel="stylesheet" href="css/letras.css">
-  <link rel="icon" href="imgn/icons8-murciélago-100.png" type="image/png">
+  <link rel="icon" href="img/icons8-murciélago-100.png" type="image/png">
 
   </head>
 
@@ -34,7 +34,7 @@
           <section class="slider">
             <div class="slider-container">
               <button id="prev" class="arrow left"><</button>
-              <img id="slide" src="imgn/fiesta.png" alt="Imagen destacada">
+              <img id="slide" src="img/fiesta.png" alt="Imagen destacada">
               <button id="next" class="arrow right">></button>
             </div>
           </section>
